src/test/ui/issues/issue-16401.stderr
error[E0308]: mismatched types
  --> $DIR/issue-16401.rs:8:9
   |
LL |     match () {
   |           -- this match expression has type `()`
LL |         Slice { data: data, len: len } => (),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected (), found struct `Slice`
   |
   = note: expected type `()`
              found type `Slice<_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
